--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,11 +6,12 @@
 
 }
 body,html{
-    background-color:rgb(170, 168, 168) ;
+    background-color:rgb(223, 221, 221) ;
     font-family: Arial, Helvetica, sans-serif;
 }
 header{
     background-color: rgb(170, 168, 168);
+    border: 2px solid black;
     
    
 }
