--- a/estilos/media.css
+++ b/estilos/media.css
@@ -8,8 +8,16 @@
     }
     menu{
         display: block;
+        
     }
     menu > ul > li{
         display: inline-block;
+       
+       
+        
     }
+    main{
+        width: 768px;
+    }
+
 }
